# cv_evaluator

./: .gitignore  README.md  cvevaluator.py  cvevaluator.service  pypdf_strreplace.py  requirements.txt  restart.sh  startCVevaluator.sh
.github/workflows/: pulumi_cicd.yaml
cloud_run/: .gitignore  Pulumi.dev.yaml  Pulumi.yaml  README.md  __main__.py  infra.yaml  pyproject.toml
cloud_run/.github/workflows/: pulumi_cicd.yaml
cloud_run/app/: Dockerfile  main.py  requirements.txt
cloud_run/app/core/: config.py  logging.py
cloud_run/app/models/: classes.py  llm.py  prompt.py
cloud_run/app/resume/: classes.py  error.py  parse.py  process.py
cloud_run/app/slack/: routes.py
util/: cvpartner.py  cvpartner_user.py  open_ai.py  slack.py  util.py
