[project]
name = "cloud-run"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "pulumi>=3.0.0,<4.0.0",
    "pulumi-docker>=4.6.1",
    "pulumi-docker-build>=0.0.0,<1.0.0",
    "pulumi-gcp>=8.0.0,<9.0.0",
    "pulumi-random>=4.0.0,<5.0.0",
    "python-dotenv>=1.0.1",
]
